feat: created netflix manage profile ui logic

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.profile-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-list-wrapper {
+  margin-top: 24px;
+  display: flex;
+}
+
+.profile-wrapper {
+  margin: 0 16px;
+  position: relative;
+}
+
+.title {
+  font-size: 3.5vw;
+  font-weight: 500;
+}
+
+.profile-img {
+  height: 10vw;
+  width: 10vw;
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.profile-img:hover {
+  outline: 2px solid #fff;
+}
+
+.profile-name {
+  font-size: 24px;
+  text-align: center;
+  margin: 14px 0;
+  color: grey;
+}
+
+.add-profile {
+  background: grey;
+  border-radius: 50%;
+  height: 140px;
+  width: 140px;
+  position: relative;
+  margin-top: 32px;
+  cursor: pointer;
+}
+
+.add {
+  font-weight: 800;
+  font-size: 120px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -54%);
+  color: black;
+}
+
+.btn-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 36px;
+}
+
+.cus-btn {
+  border: 1px solid grey;
+  color: grey;
+  padding: 16px;
+  width: 250px;
+  background: transparent;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.profile-manage-wrapper {
+  display: flex;
+  alighn-items: center;
+}
+
+.profile-img-wrapper {
+  position: relative;
+}
+
+.edit-overlay {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button:hover {
+  border-color: white;
+  color: white;
+}
+
+.new-profile-section {
+}
+
+.new-profile-add {
+  padding: 16px;
+  border: 1px solid #fff;
+  background: transparent;
+  font-size: 16px;
+  color: white;
+  margin-left: 18px;
+  cursor: pointer;
+}
+
+.user-inp {
+  width: 500px;
+  height: 20px;
+  padding: 16px;
+  border: 1px solid #fff;
+  font-size: 20px;
+}
+
+.user-inp:focus {
+  outline: none;
+}
+
+.edit-profiles {
+  cursor: pointer;
 }
